2.0.9.dev0
 * #1123: Add loading of systemd credentials even when running borgmatic outside of a systemd
   service.
 * #1149: Add support for Python 3.14.
 * #1149: Include automated tests in the source dist tarball uploaded to PyPI.

2.0.8
 * #1114: Document systemd configuration changes for the ZFS filesystem hook.
 * #1116: Add dumping of database containers via their container names, handy for backing up
   database containers from the host. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#database-client-on-the-host
 * #1116: Add optional database labels to make it easier to find your dumps within a Borg archive.
 * #1118: Fix a bug in which Borg hangs during database backup when different filesystems are in
   use.
 * #1122: To prevent the user from inadvertently excluding the "bootstrap" action's manifest, always
   error and exit when the borgmatic runtime directory overlaps with the configured excludes.
 * #1125: Clarify documentation about ZFS, Btrfs, and LVM snapshotting when a separate
   filesystem is mounted in the source directory. (Spoiler: The separate filesystem doesn't get
   included in the snapshot.)
 * #1126: Create LVM snapshots as read-write to avoid an error when snapshotting ext4 filesystems
   with orphaned files that need recovery.
 * #1133: Fix the "spot" check to include borgmatic configuration files that were backed up to
   support the "bootstrap" action.
 * #1136: For all database hooks, record metadata about the dumps contained within an archive.
 * #1139: Set "borgmatic" as the user agent when connecting to monitoring services.
 * #1146: Fix a broken "create" action and "--archive latest" flag when multiple archives share the
   same name with Borg 2.
 * Treat configuration file permissions issues as errors instead of warnings.
 * When running tests, use Ruff for faster and more comprehensive code linting and formatting,
   replacing Flake8, Black, isort, etc.